[project]
name = "occlusionmask"
description = "Custom node for advanced face occlusion, segmentation, and masking"
# v1.0.4: Update Sliders' Defaults)
version = "1.0.4"
license = { file = "LICENSE" }
dependencies = ["retina-face", "torch", "opencv-python", "numpy", "Pillow", "onnxruntime"]

[project.urls]
Repository = "https://github.com/ialhabbal/OcclusionMask"

[tool.comfy]
PublisherId = "ialhabbal"
DisplayName = "OcclusionMask"
Icon = "https://github.com/ialhabbal/OcclusionMask/blob/main/media/Occlusion-ico.png?raw=true"
includes = []